@@ -44,11 +44,13 @@ Calculations to 30000 K,” NASA RP-1232, 1990.
 #define Runiv 1.987 //cal/(g-mol K)
 #define kBol 1.38066E-16 // erg/K
 
-// NOTE: the polynomials in OMEGA are accurate if the temperature is higher than 1000K.
-//       However, better predictions are obtained when using the polynomials at at a below-bound
-//       temperature rather than clipping the temperature to 1000 K
-//       Thus, set OMEGATMINCLIP to 10 K 
+// NOTE: the cross sections in OMEGA are accurate if the temperature is between 1000K and 30000K.
+//       However, better predictions are obtained when using the polynomials at out of bound
+//       temperatures rather than clipping the temperature to 1000 K or to 30000 K
+//       Thus, set OMEGATMINCLIP to 10 K and OMEGATMAXCLIP to 1e9 K
+ 
 #define OMEGATMINCLIP 10.0
+#define OMEGATMAXCLIP 1e9
 
 #define LNLAMBDA_NONE 0
 #define LNLAMBDA_GUPTAYOS 1
@@ -70,7 +72,7 @@ Calculations to 30000 K,” NASA RP-1232, 1990.
 double _piOmega11(long s, long r, double T){
   double A,B,C,D;
   
-  T=min(max(OMEGATMINCLIP,T),30000.0);
+  T=min(max(OMEGATMINCLIP,T),OMEGATMAXCLIP);
   
   switch (smap[s]){
     case SMAP_eminus:
@@ -82,16 +84,16 @@ double _piOmega11(long s, long r, double T){
         case SMAP_N2plus: A=0.0; B=0.0; C=-2.0; D=23.8237; break;
         case SMAP_NOplus: A=0.0; B=0.0; C=-2.0; D=23.8237; break;
         case SMAP_O: if(T< 9000.0) {A=0.0164; B=-0.2431; C=1.1231; D=-1.5561;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
+          else if(T >= 9000.0 ) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_N: A=0.0; B=0.0; C=0.0; D=1.6094; break;    
         case SMAP_NO: if(T< 8000.0) {A=-0.2202; B=5.2265; C=-40.5659; D=104.7126;}
-          else if(T >= 8000.0 && T<= 30000.0) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
+          else if(T >= 8000.0 ) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
           else fatal_error("Temperature of %.15E K is out of range of validitity (1000-30000 K) for species pair %ld,%ld.",s,r);
           break;    
         case SMAP_O2: if(T< 9000.0) {A=0.0241; B=-0.3467; C=1.3887; D=-0.0110;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
+          else if(T >= 9000.0 ) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;    
         case SMAP_N2: A=0.1147; B=-2.8945; C=24.5080; D=-67.3691; break;    
@@ -181,7 +183,7 @@ double _piOmega11(long s, long r, double T){
     case SMAP_O:
       switch (smap[r]){
         case SMAP_eminus: if(T< 9000.0) {A=0.0164; B=-0.2431; C=1.1231; D=-1.5561;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
+          else if(T >= 9000.0 ) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=-0.0034; C=-0.0572; D=4.9901; break;
@@ -216,7 +218,7 @@ double _piOmega11(long s, long r, double T){
     case SMAP_NO:
       switch (smap[r]){
         case SMAP_eminus: if(T< 8000.0) {A=-0.2202; B=5.2265; C=-40.5659; D=104.7126;}
-          else if(T >= 8000.0 && T<= 30000.0) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
+          else if(T >= 8000.0 ) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=0.0; C=-0.4000; D=6.8543; break;
@@ -235,7 +237,7 @@ double _piOmega11(long s, long r, double T){
     case SMAP_O2:
       switch (smap[r]){
         case SMAP_eminus: if(T< 9000.0) {A=0.0241; B=-0.3467; C=1.3887; D=-0.0110;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
+          else if(T >= 9000.0 ) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=0.0; C=-0.4000; D=6.8543; break;
@@ -289,16 +291,16 @@ double _piOmega22(long s, long r, double T){
         case SMAP_N2plus: A=0.0; B=0.0; C=-2.0; D=24.3061; break;
         case SMAP_NOplus: A=0.0; B=0.0; C=-2.0; D=24.3061; break;
         case SMAP_O: if(T< 9000.0) {A=0.0164; B=-0.2431; C=1.1231; D=-1.5561;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
+          else if(T >= 9000.0 ) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_N: A=0.0; B=0.0; C=0.0; D=1.6094; break;
         case SMAP_NO: if(T< 8000.0) {A=-0.2202; B=5.2265; C=-40.5659; D=104.7126;}
-          else if(T >= 8000.0 && T<= 30000.0) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
+          else if(T >= 8000.0 ) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
           else fatal_error("Temperature of %.15E K is out of range of validitity (1000-30000 K) for species pair %ld,%ld.",s,r);
           break;
         case SMAP_O2: if(T< 9000.0) {A=0.0241; B=-0.3467; C=1.3887; D=-0.0110;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
+          else if(T >= 9000.0 ) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_N2: A=0.1147; B=-2.8945; C=24.5080; D=-67.3691; break;
@@ -388,7 +390,7 @@ double _piOmega22(long s, long r, double T){
     case SMAP_O:
       switch (smap[r]){
         case SMAP_eminus: if(T< 9000.0) {A=0.0164; B=-0.2431; C=1.1231; D=-1.5561;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
+          else if(T >= 9000.0 ) {A=-0.2027; B=5.6428; C=-51.5646; D=155.6091;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=0.0; C=-0.4235; D=6.7787; break;
@@ -423,7 +425,7 @@ double _piOmega22(long s, long r, double T){
     case SMAP_NO:
       switch (smap[r]){
         case SMAP_eminus: if(T< 8000.0) {A=-0.2202; B=5.2265; C=-40.5659; D=104.7126;}
-          else if(T >= 8000.0 && T<= 30000.0) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
+          else if(T >= 8000.0 ) {A=-0.2871; B=8.3757; C=-81.3787; D=265.6292;}
           else fatal_error("Temperature of %.15E K is out of range of validitity (1000-30000 K) for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=0.0; C=-0.4000; D=6.7760; break;
@@ -442,7 +444,7 @@ double _piOmega22(long s, long r, double T){
     case SMAP_O2:
       switch (smap[r]){
         case SMAP_eminus: if(T< 9000.0) {A=0.0241; B=-0.3467; C=1.3887; D=-0.0110;}
-          else if(T >= 9000.0 && T<= 30000.0) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
+          else if(T >= 9000.0 ) {A=0.0025; B=-0.0742; C=0.7235; D=-0.2116;}
           else fatal_error("Temperature is out of range of validitity for species pair %ld,%ld.",s,r);
           break;
         case SMAP_Oplus: A=0.0; B=0.0; C=-0.4000; D=6.7760; break;
